Legend:

[+] New/improved feature 
[B] Bug fixed
[K] Known issue
[O] Other

Change log
==========

v0.6.0

[+] Fixed some LLVM related warnings and errors (clang/clang++)

[+][hal] Added NF port extensions 

[+][pipeline] Added NF port type extensions 
[+][pipeline] Added L2 (ETH_DST, VLAN) l2hash matching algorithm


v0.5.1

[B][pipeline] Fixed improper byte counter setting for group statistics
[B][pipeline] Fixed bug in the destruction of of1x_stats_group_desc_msg_t

v0.5.0

[+][common] Improved OF1.3 support and other fixes
[+][common] Set more useful defaults for cofmsg (e.g. OFP_NO_BUFFER for buffer-id)

[+][pipeline] Improved tracing and logging
[+][pipeline] Improved OF1.3 support
[+][pipeline] Changed default behaviour for table matches/actions bitmaps; all capabilities enabled by default. 
[+][pipeline] Added placeholders for WLAN/CAPWAP matches and actions 
[+][pipeline] Added PBB_ISID support
[B][pipeline] Fixed group ID 0 is valid
 
[+][examples] Improved ethswctld, now supporting OF1.0, OF1.2 and OF1.3 simultaneously 


v0.4.6

[B][pipeline] Fixed bug during OUTPUT action for unknown ports, that could lead to a leakage of PKTs in exceptional situations.

v0.4.5

[B][pipeline] Fixed critical bug in __of1x_destroy_all_entries_from_timer_group() leading to a memory corruption

v0.4.4

[B][common] cmacaddr: use right macros in sscanf #29 

[B][pipeline] Fixed critical bug in __of1x_get_time_ms() for 32bit compilers leading to dead-lock in timers.

v0.4.3

[B][common] Fixed bug for match ARP_THA used invalid constants for OXM type 
[B][common] cofmatch.h: added method get_ipv6_flabel_value() and get_ipv6_flabel_mask(), according to spec
[B][common] Minor changes to coxmatch.h
[B][common] cofportstatsarray: corrected minor issue in output operator 
[B][common] cofmsg_flow_removed::unpack(): invalid length for unpacking matches 
[B][common] caddress.h: added missing dump of port number #11 