@@ -91,10 +91,10 @@ static inline void __of1x_clear_write_actions(of1x_write_actions_t* pkt_write_ac
 }
 
 //fwd decl
-static inline void __of1x_process_apply_actions(const unsigned int tid, const struct of1x_switch* sw, const unsigned int table_id, datapacket_t* pkt, const of1x_action_group_t* apply_actions_group, bool replicate_pkts);
+static inline void __of1x_process_apply_actions(const unsigned int tid, const struct of1x_switch* sw, const unsigned int table_id, datapacket_t* pkt, const of1x_action_group_t* apply_actions_group, bool replicate_pkts, datapacket_t** reinject_pkt);
 
 //Process all actions from a group
-static inline void __of1x_process_group_actions(const unsigned int tid, const struct of1x_switch* sw, const unsigned int table_id, datapacket_t *pkt,uint64_t field, of1x_group_t *group, bool replicate_pkts){
+static inline void __of1x_process_group_actions(const unsigned int tid, const struct of1x_switch* sw, const unsigned int table_id, datapacket_t *pkt, uint64_t field, of1x_group_t *group, bool replicate_pkts){
 	datapacket_t* pkt_replica;
 	of1x_bucket_t *it_bk;
 	
@@ -119,7 +119,7 @@ static inline void __of1x_process_group_actions(const unsigned int tid, const st
 				} 
 				
 				//Process all actions in the bucket
-				__of1x_process_apply_actions(tid, sw, table_id, pkt_replica, it_bk->actions, it_bk->actions->num_of_output_actions > 1); //No replica
+				__of1x_process_apply_actions(tid, sw, table_id, pkt_replica, it_bk->actions, it_bk->actions->num_of_output_actions > 1, NULL); //No replica
 				__of1x_stats_bucket_update(tid, &it_bk->stats, platform_packet_get_size_bytes(pkt));
 				
 				if(it_bk->actions->num_of_output_actions > 1)
@@ -132,7 +132,7 @@ static inline void __of1x_process_group_actions(const unsigned int tid, const st
 			break;
 		case OF1X_GROUP_TYPE_INDIRECT:
 			//executes the "one bucket defined"
-			__of1x_process_apply_actions(tid, sw,table_id,pkt,group->bc_list->head->actions, replicate_pkts);
+			__of1x_process_apply_actions(tid, sw,table_id,pkt,group->bc_list->head->actions, replicate_pkts, NULL);
 			__of1x_stats_bucket_update(tid, &group->bc_list->head->stats, platform_packet_get_size_bytes(pkt));
 			break;
 		case OF1X_GROUP_TYPE_FF:
@@ -150,7 +150,7 @@ static inline void __of1x_process_group_actions(const unsigned int tid, const st
 }
 
 /* Contains switch with all the different action functions */
-static inline void __of1x_process_packet_action(const unsigned int tid, const struct of1x_switch* sw, const unsigned int table_id, datapacket_t* pkt, of1x_packet_action_t* action, bool replicate_pkts){
+static inline void __of1x_process_packet_action(const unsigned int tid, const struct of1x_switch* sw, const unsigned int table_id, datapacket_t* pkt, of1x_packet_action_t* action, bool replicate_pkts, datapacket_t** reinject_pkt){
 
 	uint32_t port_id;
 
@@ -637,69 +637,73 @@ static inline void __of1x_process_packet_action(const unsigned int tid, const st
 			//Store in automatic
 			port_id = action->__field.u32;
 	
-			if( port_id < OF1X_PORT_MAX ||
-				port_id == OF1X_PORT_IN_PORT ||
-				port_id == OF1X_PORT_ALL ||
-				port_id == OF1X_PORT_FLOOD ||
-				port_id == OF1X_PORT_NORMAL ||
-				port_id == OF1X_PORT_CONTROLLER){
+			//Pointer for the packet to be sent
+			datapacket_t* pkt_to_send;			
 
-				//Pointer for the packet to be sent
-				datapacket_t* pkt_to_send;			
-	
-				//Duplicate the packet only if necessary
-				if(replicate_pkts){
-					pkt_to_send = platform_packet_replicate(pkt);
-				
-					//check for wrong copy
-					if(unlikely(pkt_to_send == NULL)){
-						ROFL_PIPELINE_INFO("Packet[%p] could NOT be cloned during OUTPUT action\n", pkt);
-						return;
-					}
-					ROFL_PIPELINE_INFO("Packet[%p] was cloned into [%p] during OUTPUT action\n", pkt, pkt_to_send);
-					
-				}else
-					pkt_to_send = pkt;
-
-				//Perform output
-				if( port_id < LOGICAL_SWITCH_MAX_LOG_PORTS && unlikely(NULL != sw->logical_ports[port_id].port) ){
-
-					//Single port output
-					//According to the spec a packet cannot be sent to the incoming port
-					//unless IN_PORT meta port is used
-					if(unlikely(port_id == *platform_packet_get_port_in(pkt))){
-						ROFL_PIPELINE_DEBUG("Packet[%p] dropped. Attempting to output to the incoming port %u\n", pkt_to_send, port_id);
-						platform_packet_drop(pkt_to_send);
-					}else{
-						ROFL_PIPELINE_INFO("Packet[%p] outputting to port num. %u\n", pkt_to_send, port_id);
-						platform_packet_output(pkt_to_send, sw->logical_ports[port_id].port);
-					}
-
-				}else if(port_id == OF1X_PORT_FLOOD){
-					//Flood
-					ROFL_PIPELINE_INFO("Packet[%p] outputting to FLOOD\n", pkt_to_send);
-					platform_packet_output(pkt_to_send, flood_meta_port);
-				}else if(port_id == OF1X_PORT_CONTROLLER ||
-					port_id == OF1X_PORT_NORMAL){
-					//Controller
-					ROFL_PIPELINE_INFO("Packet[%p] outputting to CONTROLLER\n", pkt_to_send);
-					platform_of1x_packet_in(sw, table_id, pkt_to_send, action->send_len, OF1X_PKT_IN_ACTION);
-				}else if(port_id == OF1X_PORT_ALL){
-					//All
-					ROFL_PIPELINE_INFO("Packet[%p] outputting to ALL_PORT\n", pkt_to_send);
-					platform_packet_output(pkt_to_send, all_meta_port);
-				}else if(port_id == OF1X_PORT_IN_PORT){
-					//in port
-					ROFL_PIPELINE_INFO("Packet[%p] outputting to IN_PORT\n", pkt_to_send);
-					platform_packet_output(pkt_to_send, in_port_meta_port);
-				}else{
-					//This condition can only happen when flowmods are left for ports that are non-existent anymore
-					//or port id has been corrupted
-					ROFL_PIPELINE_INFO("Packet[%p] WARNING output to UNKNOWN port %u\n", pkt_to_send, port_id);
-		
-					//Drop the pkt
-					platform_packet_drop(pkt_to_send);
+			//Duplicate the packet only if necessary
+			if(replicate_pkts){
+				pkt_to_send = platform_packet_replicate(pkt);
+			
+				//check for wrong copy
+				if(unlikely(pkt_to_send == NULL)){
+					ROFL_PIPELINE_INFO("Packet[%p] could NOT be cloned during OUTPUT action\n", pkt);
+					return;
 				}
+				ROFL_PIPELINE_INFO("Packet[%p] was cloned into [%p] during OUTPUT action\n", pkt, pkt_to_send);
+				
+			}else
+				pkt_to_send = pkt;
+
+			//Perform output
+			if( port_id < LOGICAL_SWITCH_MAX_LOG_PORTS && unlikely(NULL != sw->logical_ports[port_id].port) ){
+
+				//Single port output
+				//According to the spec a packet cannot be sent to the incoming port
+				//unless IN_PORT meta port is used
+				if(unlikely(port_id == *platform_packet_get_port_in(pkt))){
+					ROFL_PIPELINE_DEBUG("Packet[%p] dropped. Attempting to output to the incoming port %u\n", pkt_to_send, port_id);
+					platform_packet_drop(pkt_to_send);
+				}else{
+					ROFL_PIPELINE_INFO("Packet[%p] outputting to port num. %u\n", pkt_to_send, port_id);
+					platform_packet_output(pkt_to_send, sw->logical_ports[port_id].port);
+				}
+
+			}else if(port_id == OF1X_PORT_FLOOD){
+				//Flood
+				ROFL_PIPELINE_INFO("Packet[%p] outputting to FLOOD\n", pkt_to_send);
+				platform_packet_output(pkt_to_send, flood_meta_port);
+			}else if(port_id == OF1X_PORT_CONTROLLER ||
+				port_id == OF1X_PORT_NORMAL){
+				//Controller
+				ROFL_PIPELINE_INFO("Packet[%p] outputting to CONTROLLER\n", pkt_to_send);
+				platform_of1x_packet_in(sw, table_id, pkt_to_send, action->send_len, OF1X_PKT_IN_ACTION);
+			}else if(port_id == OF1X_PORT_ALL){
+				//All
+				ROFL_PIPELINE_INFO("Packet[%p] outputting to ALL_PORT\n", pkt_to_send);
+				platform_packet_output(pkt_to_send, all_meta_port);
+			}else if(port_id == OF1X_PORT_IN_PORT){
+				//in port
+				ROFL_PIPELINE_INFO("Packet[%p] outputting to IN_PORT\n", pkt_to_send);
+				platform_packet_output(pkt_to_send, in_port_meta_port);
+			}else if(port_id == OF1X_PORT_TABLE){
+				if(likely(reinject_pkt != NULL)){
+					//OFPP_TABLE
+					ROFL_PIPELINE_INFO("Packet[%p] reinjecting pkt to the sw(%p) pipeline\n", sw, pkt_to_send);
+					*reinject_pkt = pkt_to_send; 
+					assert(action->next == NULL);
+					return;
+				}else{
+					ROFL_PIPELINE_INFO("ERROR: packet[%p->%p] trying to execute an output to meta-port 'TABLE' from a non-PKT_OUT action list.\n", pkt, pkt_to_send);
+					assert(0);	
+				}
+				platform_packet_output(pkt_to_send, in_port_meta_port);
+			}else{
+				//This condition can only happen when flowmods are left for ports that are non-existent anymore
+				//or port id has been corrupted
+				ROFL_PIPELINE_INFO("Packet[%p] WARNING output to UNKNOWN port %u\n", pkt_to_send, port_id);
+	
+				//Drop the pkt
+				platform_packet_drop(pkt_to_send);
 			}
 			break;
 	}
@@ -708,12 +712,12 @@ static inline void __of1x_process_packet_action(const unsigned int tid, const st
 
 
 //Process apply actions
-static inline void __of1x_process_apply_actions(const unsigned int tid, const struct of1x_switch* sw, const unsigned int table_id, datapacket_t* pkt, const of1x_action_group_t* apply_actions_group, bool replicate_pkts){
+static inline void __of1x_process_apply_actions(const unsigned int tid, const struct of1x_switch* sw, const unsigned int table_id, datapacket_t* pkt, const of1x_action_group_t* apply_actions_group, bool replicate_pkts, datapacket_t** reinject_pkt){
 
 	of1x_packet_action_t* it;
 
 	for(it=apply_actions_group->head;it;it=it->next){
-		__of1x_process_packet_action(tid, sw, table_id, pkt, it, replicate_pkts);
+		__of1x_process_packet_action(tid, sw, table_id, pkt, it, replicate_pkts, reinject_pkt);
 	}	
 }
 
@@ -730,7 +734,7 @@ static inline void __of1x_process_write_actions(const unsigned int tid, const st
 	for(i=0,j=0;(i<write_actions->num_of_actions) && (j < OF1X_AT_NUMBER);j++){
 		if( bitmap128_is_bit_set(&write_actions->bitmap,j) ){
 			//Process action
-			__of1x_process_packet_action(tid, sw, table_id, pkt, &write_actions->actions[j], replicate_pkts);	
+			__of1x_process_packet_action(tid, sw, table_id, pkt, &write_actions->actions[j], replicate_pkts, NULL);	
 			i++;		
 		}
 	}
